--- a/detail.html
+++ b/detail.html
@@ -11,8 +11,9 @@
 		</p></a>
 		<p class="two">
 			<a class="line" id="vote"><img src="img/detail/bottom/recommend.png" /> 推荐一票</a>
-			<a class="line click" id="onlinec"><img src="img/detail/bottom/consulting.png" /> 在线咨询</a>
+			<!--<a class="line click" id="onlinec"><img src="img/detail/bottom/consulting.png" /> 在线咨询</a>-->
 			<a id="phonec"><img src="img/detail/bottom/phone.png" /> 电话咨询</a>
+			<br class="cb"/>
 		</p>
 	</div>
 	<div class="head">
@@ -24,7 +25,7 @@
 		<div class="data">
 			<div class="imgtext mobile"><img src="img/detail/mobile.png" /> <b id="phones">...</b></div>
 			<div class="imgtext location"><img src="img/detail/location.png" /> <span class="csr" id="address">...</span></div>
-			<div class="explain"><span>浏览量：</span><span class="red" id="view">...</span><span class="right">发布时间：<span class="red" id="ctime">...</span></span></div>
+			<!--<div class="explain"><span>浏览量：</span><span class="red" id="view">...</span><span class="right">发布时间：<span class="red" id="ctime">...</span></span></div>-->
 		</div>
 		<div class="bdsharebuttonbox" id='bdsharebuttonbox'>
 			<a class="bds_more flt" data-cmd="more">分享：</a>
