--- a/index.html
+++ b/index.html
@@ -11,11 +11,18 @@
 <content id="main"></content>
 <footer>
 	<div class="line"><img src="img/bottom/line.png" /></div>
-	<dl>
+	<!--<dl class="old">
 		<dt class="index active" url="index"><img class="cut r" src="img/bottom/cutline.png" /> <div><img class="icon open" src="img/bottom/index_on.png" /><img class="icon close" src="img/bottom/index_off.png" /></div><div class="txt">首页</div></dt>
 		<dt class="find"><img class="cut r" src="img/bottom/cutline.png" /> <div><img class="icon" src="img/bottom/msg_off.png" /></div><div class="txt">消息</div></dt>
 		<dt class="send click"><img src="img/bottom/send.png" /></dt>
 		<dt class="my"><img class="cut l" src="img/bottom/cutline.png" /> <div><img class="icon" src="img/bottom/server_off.png" /></div><div class="txt">客服</div></dt>
+		<dt class="comt click" url="my"><img class="cut l" src="img/bottom/cutline.png" /> <div><img class="icon" src="img/bottom/my_off.png" /></div><div class="txt">我的</div></dt>
+		<br class="cb" />
+	</dl>-->
+	<dl class="new">
+		<dt class="index active" url="index"><img class="cut r" src="img/bottom/cutline.png" /> <div><img class="icon open" src="img/bottom/index_on.png" /><img class="icon close" src="img/bottom/index_off.png" /></div><div class="txt">专线查询</div></dt>
+		<dt class="find" url="blog"><img class="cut r" src="img/bottom/cutline.png" /> <div><img class="icon" src="img/bottom/msg_off.png" /></div><div class="txt">今日特价</div></dt>
+		<dt class="my" url="price"><img class="cut l" src="img/bottom/cutline.png" /> <div><img class="icon" src="img/bottom/server_off.png" /></div><div class="txt">货源询价</div></dt>
 		<dt class="comt click" url="my"><img class="cut l" src="img/bottom/cutline.png" /> <div><img class="icon" src="img/bottom/my_off.png" /></div><div class="txt">我的</div></dt>
 		<br class="cb" />
 	</dl>
