--- a/list.html
+++ b/list.html
@@ -1,7 +1,7 @@
 <div class="list">
 	<div class="head">
 		<span class="plt"><img src="img/index/area.png" class="area" /><span class="cityname" id="cityname">上海</span></span>
-		<img src="img/index/logo.png" class="logo" />
+		<input type="text" placeholder="请输入目的地或公司名称" />
 	</div>
 	<div class="topImg"><img src="img/index/top.png"/></div>
 	<dl class="where">
