--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,30 @@
 <div class="blog">
 	<div class="head">
-		<span class="plt"><img src="img/index/area.png" class="area" /><span class="cityname" id="cityname">上海</span></span>
-		<input type="text" placeholder="请输入目的地或公司名称" />
+		<a class="plt" id="area-choice"><span class="cityname" id="cityname">上海</span></a>
+		<b><img src="img/search.png"/><input id="search-choice" type="text" placeholder="请输入目的地或公司名称" /></b>
+		<div class="hide searchBox" id="searchBox">
+			<div class="title">热门搜索</div>
+			<div class="words">
+				<a>货物</a><a>货物</a><a>货物</a><a>货物</a><a>货物</a><br class="cb"/>
+			</div>
+			<div class="title">历史记录</div>
+			<dl>
+				<dt>货物</dt>
+				<dt>货物</dt>
+			</dl>
+		</div>
+		<div class="hide searchBox" id="areaBox">
+			<div class="title">热门城市</div>
+			<div class="words">
+				<a>1</a><a>2</a><a>3</a><a>4</a><a>5</a><br class="cb"/>
+			</div>
+			<div class="title">其他城市</div>
+			<dl>
+				<dt>1</dt>
+				<dt>2</dt>
+			</dl>
+		</div>
+		<a class="prt">发布</a>
 	</div>
 	<dl class="blog"></dl>
 </div>
