--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 	</div>
 </footer>
 <script src="js/zepto.min.js"></script>
+<script src="js/cityData.js"></script>
 <script src="js/qrcode.js"></script>
 <script src="js/tmp.js"></script>
 <script src="js/base.js"></script>
