--- a/my.html
+++ b/my.html
@@ -5,12 +5,15 @@
 		<div class="nickname">查物流@查物流CEO<span>></span></div>
 	</div>
 	<dl>
-		<dt class="line"><img src="img/my/msg.png"/><br/>我的消息</dt>
 		<dt class="line"><img src="img/my/card.png"/><br/>我的名片</dt>
-		<dt><img src="img/my/goods.png"/><br/>我的询价</dt>
 		<dt class="line"><img src="img/my/price.png"/><br/>我的特价</dt>
+		<dt><img src="img/my/goods.png"/><br/>我的询价</dt>
+		<!--<dt class="line"><img src="img/my/msg.png"/><br/>我的消息</dt>
 		<dt class="line"><img src="img/my/custom.png"/><br/>我的订阅</dt>
-		<dt><img src="img/my/horn.png"/><br/>我的推广</dt>
+		<dt><img src="img/my/horn.png"/><br/>我的推广</dt>-->
 		<br class="cb"/>
 	</dl>
+	<div class="contact">
+		客服热线：<a href="tel:400-800-1856">400-800-1856</a>
+	</div>
 </div>
