Signed-off-by: jiaoluojun <841232468@qq.com>

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
 				<a>货物</a><a>货物</a><a>货物</a><a>货物</a><a>货物</a><br class="cb"/>
 			</div>
 			<div class="title">历史记录</div>
-			<dl>
+			<dl class="his">
 				<dt>货物</dt>
 				<dt>货物</dt>
 			</dl>
