--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <div class="home">
 	<div class="head">
-		<a class="plt" id="area-choice"><span class="cityname" id="cityname">上海</span></a>
+		<a class="plt" k="area" id="area-choice"><span class="cityname" id="cityname"></span></a>
 		<b><img src="img/search.png"/><input id="search-choice" type="text" placeholder="请输入目的地或公司名称" /></b>
 		<div class="hide searchBox" id="searchBox">
 			<div class="title">热门搜索</div>
@@ -8,7 +8,7 @@
 				<a>货物</a><a>货物</a><a>货物</a><a>货物</a><a>货物</a><br class="cb"/>
 			</div>
 			<div class="title">历史记录</div>
-			<dl>
+			<dl class="his">
 				<dt>货物</dt>
 				<dt>货物</dt>
 			</dl>
