Signed-off-by: [jiaolj] <[841232468@qq.com]>

--- a/blog.html
+++ b/blog.html
@@ -1,17 +1,18 @@
 <div class="blog">
 	<div class="head">
 		<a class="plt" id="area-choice"><span class="cityname" id="cityname">上海</span></a>
-		<b><img src="img/search.png"/><input id="search-choice" type="text" placeholder="请输入目的地或公司名称" /></b>
+		<b><img src="img/search.png"/><input id="search-choice" type="text" placeholder="请输入关键字" /></b>
 		<div class="hide searchBox" id="searchBox">
 			<div class="title">热门搜索</div>
 			<div class="words">
 				<a>货物</a><a>货物</a><a>货物</a><a>货物</a><a>货物</a><br class="cb"/>
 			</div>
 			<div class="title">历史记录</div>
-			<dl>
+			<dl class="his">
 				<dt>货物</dt>
 				<dt>货物</dt>
 			</dl>
+			<a class="ok">搜索</a>
 		</div>
 		<div class="hide searchBox" id="areaBox">
 			<div class="title">热门城市</div>
