Signed-off-by: [jiaolj] <[841232468@qq.com]>

--- a/detail.html
+++ b/detail.html
@@ -10,7 +10,7 @@
 			<img src="img/detail/bottom/follow_off.png" /> <br />关注
 		</p></a>
 		<p class="two">
-			<a class="line" id="vote"><img src="img/detail/bottom/recommend.png" /> 推荐一票</a>
+			<a class="line" id="vote"><img src="img/detail/bottom/recommend.png" /> 推荐一下</a>
 			<!--<a class="line click" id="onlinec"><img src="img/detail/bottom/consulting.png" /> 在线咨询</a>-->
 			<a id="phonec"><img src="img/detail/bottom/phone.png" /> 电话咨询</a>
 			<br class="cb"/>
@@ -35,18 +35,6 @@
 			<a class="bds_qzone frt" data-cmd="qzone" title="分享到QQ空间">空间</a>
 			<br class="cb"/>
 		</div>
-	</section>
-	<section class="level">
-		<div class="tit" id="leave">
-			推荐指数					
-			<span class="star" id="stars">
-				<img src="img/other/star_off.png" /><img src="img/other/star_off.png" /><img src="img/other/star_off.png" /><img src="img/other/star_off.png" /><img src="img/other/star_off.png" />
-			</span> <span class="viewer">支持者<span id="viewNum">0</span>票</span>
-		</div>
-		<dl class="dtail" id="dtail">
-		</dl>
-		<div class="views" id="views">↓ 查看更多支持者</div>
-		<div class="views hide" id="viewsClose">↑ 收回<span></div>
 	</section>
 	<section class="two" style="display:none" id="sgoods">
 		<div class="tit"><b>车货信息</b></div>
