--- a/home.html
+++ b/home.html
@@ -1,18 +1,23 @@
 <div class="home">
 	<div class="head">
 		<a class="plt choice" k="name"><span class="cityname" id="cityname"></span></a>
-		<b><img src="img/search.png"/><input id="search-choice" type="text" placeholder="请输入关键字" /></b>
-		<div class="hide searchBox" id="searchBox">
-			<div class="title">热门搜索</div>
-			<div class="words">
-				<a>货物</a><a>货物</a><a>货物</a><a>货物</a><a>货物</a><br class="cb"/>
+		<b id="search-choice"><img src="img/search.png"/> 搜索</b>
+		<div class="hide allBox" id="searchBox">
+			<div class="search"><a class="back"></a><img src="img/search.png"/><input type="text" placeholder="请输入关键词"/></div>
+			<div class="box">
+				<div class="title">热门搜索</div>
+				<div class="words">
+					<a>北京</a><a>天津</a><a>重庆</a>
+					<a>广东</a><a>江苏</a><a>浙江</a>
+					<a>山东</a><a>安徽</a><a>湖南</a>
+					<br class="cb"/>
+				</div>
+				<div class="title">历史搜索</div>
+				<dl class="his">
+					<dt><img src="img/time.png"/> 广州</dt>
+				</dl>
+				<a class="ok"><span>搜索</span></a>
 			</div>
-			<div class="title">历史记录</div>
-			<dl class="his">
-				<dt>货物</dt>
-				<dt>货物</dt>
-			</dl>
-			<a class="ok">搜索</a>
 		</div>
 		<div class="hide searchBox" id="areaBox">
 			<div class="title">热门城市</div>
