--- a/my.html
+++ b/my.html
@@ -1,8 +1,8 @@
 <div class="my">
 	<div class="myhead">
 		<img class="bg" src="img/my/bg.png"/>
-		<img class="head" src="img/my/head.png"/>
-		<div class="nickname">查物流@查物流CEO<span>></span></div>
+		<img class="head" src=""/>
+		<div class="nickname"><span>></span></div>
 	</div>
 	<dl>
 		<dt class="line"><img src="img/my/card.png"/><br/>我的名片</dt>
