Signed-off-by: [jiaolj] <[841232468@qq.com]>

--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <div class="home">
 	<div class="head">
 		<a class="plt choice" k="name"><span class="cityname" id="cityname"></span></a>
-		<b id="search-choice"><img src="img/search.png"/> 搜索</b>
+		<b id="search-choice"><img src="img/search.png"/> <span>搜索</span></b>
 		<div class="hide allBox" id="searchBox">
 			<div class="search"><a class="back"></a><img src="img/search.png"/><input type="text" placeholder="请输入关键词"/></div>
 			<div class="box">
@@ -13,9 +13,7 @@
 					<br class="cb"/>
 				</div>
 				<div class="title">历史搜索</div>
-				<dl class="his">
-					<dt><img src="img/time.png"/> 广州</dt>
-				</dl>
+				<dl class="his"></dl>
 				<a class="ok"><span>搜索</span></a>
 			</div>
 		</div>
@@ -40,7 +38,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="topImg"><img src="img/index/top.png"/></div>
+	<!--<div class="topImg"><img src="img/index/top.png"/></div>-->
 	<!--<dl class="topMenu">
 		<dt url="list" class="line"><img src="img/index/card.png"/><br/>精品专线</dt>
 		<dt url="price"><img src="img/index/goods.png"/><br/>货源询价</dt>
