--- a/my.html
+++ b/my.html
@@ -4,8 +4,8 @@
 		<img class="head" src=""/>
 		<div class="nickname"><span>></span></div>
 	</div>
-	<dl>
-		<dt class="line"><img src="img/my/card.png"/><br/>我的名片</dt>
+	<dl class="mydl">
+		<dt class="line" id="mycard" url="detail"><img src="img/my/card.png"/><br/>我的名片</dt>
 		<dt class="line"><img src="img/my/price.png"/><br/>我的特价</dt>
 		<dt><img src="img/my/goods.png"/><br/>我的询价</dt>
 		<!--<dt class="line"><img src="img/my/msg.png"/><br/>我的消息</dt>
