Signed-off-by: jiaolj <841232468@qq.com>

--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 <div class="blog">
 	<div class="head">
-		<a class="plt choice" k="name"><span class="cityname" id="cityname"></span></a>
+		<!--<a class="plt choice" k="name"><span class="cityname" id="cityname"></span></a>-->
 		<b id="search-choice"><img src="img/search.png"/> 搜索</b>
 		<div class="hide allBox" id="searchBox">
 			<div class="search"><a class="back"></a><img src="img/search.png"/><input type="text" placeholder="请输入关键词"/></div>
