--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <div class="home">
 	<div class="head">
-		<a class="plt choice" k="name"><span class="cityname" id="cityname"></span></a>
+		<!--<a class="plt choice" k="name"><span class="cityname" id="cityname"></span></a>-->
 		<b id="search-choice"><img src="img/search.png"/> <span>搜索</span></b>
 		<div class="hide allBox" id="searchBox">
 			<div class="search"><a class="back"></a><img src="img/search.png"/><input type="text" placeholder="请输入关键词"/></div>
