Signed-off-by: jiaolj <841232468@qq.com>

--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 	<div class="head">
 		<!--<a class="plt choice" k="name"><span class="cityname" id="cityname"></span></a>-->
 		<b id="search-choice"><img src="img/search.png"/> 搜索</b>
-		<div class="hide allBox" id="searchBox">
+		<!--<div class="hide allBox" id="searchBox">
 			<div class="search"><a class="back"></a><img src="img/search.png"/><input type="text" placeholder="请输入关键词"/></div>
 			<div class="box">
 				<div class="title">热门搜索</div>
@@ -39,7 +39,7 @@
 				<div class="city-ok"><a>确定</a><a>取消</a></div>
 			</div>
 		</div>
-		<a href="pubs.html" class="prt">发布</a>
+		<a href="pubs.html" class="prt">发布</a>-->
 	</div>
 	<dl class="blog"></dl>
 	<div class="leave hide">
