Signed-off-by: jiaoluojun <841232468@qq.com>

--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <div class="home">
 	<div class="head">
 		<!--<a class="plt choice" k="name"><span class="cityname" id="cityname"></span></a>-->
-		<b id="search-choice"><img src="img/search.png"/> <span>搜索</span></b>
+		<div class="search-choice"><img src="img/search.png"/> <span>搜索</span></div>
 		<div class="hide allBox" id="searchBox">
 			<div class="search"><a class="back"></a><img src="img/search.png"/><input type="text" placeholder="请输入关键词"/></div>
 			<div class="box">
@@ -34,7 +34,7 @@
 				<dl class="city-data" i="0"></dl>
 				<dl class="city-data" i="1"></dl>
 				<dl class="city-data" i="2"></dl>
-				<div class="city-ok"><a>确定</a><a>取消</a></div>
+				<div class="city-ok"><a class="ok">确定</a><a class="cancel">取消</a></div>
 			</div>
 		</div>
 	</div>
