--- a/blog.html
+++ b/blog.html
@@ -1,8 +1,7 @@
 <div class="blog">
 	<div class="head">
-		<!--<a class="plt choice" k="name"><span class="cityname" id="cityname"></span></a>-->
-		<b id="search-choice"><img src="img/search.png"/> 搜索</b>
-		<!--<div class="hide allBox" id="searchBox">
+		<div class="search-choice"><img src="img/search.png"/> <span>搜索</span></div>
+		<div class="hide allBox" id="searchBox">
 			<div class="search"><a class="back"></a><img src="img/search.png"/><input type="text" placeholder="请输入关键词"/></div>
 			<div class="box">
 				<div class="title">热门搜索</div>
@@ -13,9 +12,7 @@
 					<br class="cb"/>
 				</div>
 				<div class="title">历史搜索</div>
-				<dl class="his">
-					<dt><img src="img/time.png"/> 广州</dt>
-				</dl>
+				<dl class="his"></dl>
 				<a class="ok"><span>搜索</span></a>
 			</div>
 		</div>
@@ -39,7 +36,6 @@
 				<div class="city-ok"><a>确定</a><a>取消</a></div>
 			</div>
 		</div>
-		<a href="pubs.html" class="prt">发布</a>-->
 	</div>
 	<dl class="blog"></dl>
 	<div class="leave hide">
