Signed-off-by: jiaoluojun <841232468@qq.com>

--- a/blog.html
+++ b/blog.html
@@ -36,6 +36,7 @@
 				<div class="city-ok"><a>确定</a><a>取消</a></div>
 			</div>
 		</div>
+		<a class="prt" href="pubs.html">发布</a>
 	</div>
 	<dl class="blog"></dl>
 	<div class="leave hide">
